[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = ["Bill Allen <billallen256@gmail.com>"]
description = "Starting points and helper functions for learning digital signal processing."
homepage = "http://github.com/dspftw/dspftw"
license = "MIT"
name = "dspftw"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.0"
scipy = "^1.6.3"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
  "too-many-nested-blocks",
  "too-many-branches",
  "too-many-statements",
  "R0801",
  "R0902",
  "R0903",
  "R0911",
  "R0913",
  "R0914",
  "C0103",
  "C0114",
  "C0115",
  "C0116",
  "C0123",
  "C0301",
  "C0302",
  "fixme",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311
isolated_build = true

[gh-actions]
python =
  3.9: py39
  3.10: py310
  3.11: py311

[testenv]
recreate = true
deps =
  flake8
  pylint
commands =
  python -m flake8 --select E201,E202,E231,E262,E265 dspftw
  python -m pylint dspftw
  python -m unittest discover tests
"""
